<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ JBoss, Home of Professional Open Source.
  ~ Copyright 2018 Red Hat, Inc., and individual contributors
  ~ as indicated by the @author tags.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.wildfly.security</groupId>
        <artifactId>wildfly-elytron-parent</artifactId>
        <version>2.9.3.CR1-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>wildfly-elytron-security-manager</artifactId>

    <name>WildFly Elytron - Security Manager</name>
    <description>WildFly Security Security Manager</description>
    
    <properties>
        <!-- Java 21 requires -Djava.security.manager=allow for SecurityManager tests -->
        <surefire.security.manager.arg />
        <!-- Default to the base classes; overridden to the java25 multi-release directory when testing on Java 25 -->
        <surefire.classes.directory>${project.build.directory}/classes</surefire.classes.directory>
    </properties>

    <profiles>
        <!-- Enable SecurityManager for Java 21 tests -->
        <profile>
            <id>java21-security-manager</id>
            <activation>
                <property>
                    <name>jdk.test.version</name>
                    <value>21</value>
                </property>
            </activation>
            <properties>
                <surefire.security.manager.arg>-Djava.security.manager=allow</surefire.security.manager.arg>
            </properties>
        </profile>
        <!-- Use the Java 25 multi-release classes when testing on Java 25 -->
        <profile>
            <id>java25-classes</id>
            <activation>
                <property>
                    <name>jdk.test.version</name>
                    <value>25</value>
                </property>
            </activation>
            <properties>
                <surefire.classes.directory>${project.build.directory}/classes/META-INF/versions/25</surefire.classes.directory>
            </properties>
        </profile>
    </profiles>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <release>17</release>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-java25</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <release>25</release>
                            <compileSourceRoots>
                                <compileSourceRoot>${project.basedir}/src/main/java25</compileSourceRoot>
                            </compileSourceRoots>
                            <multiReleaseOutput>true</multiReleaseOutput>
                            <proc>none</proc>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${version.jar.plugin}</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                            <Jar-Version>${project.version}</Jar-Version>
                            <Jar-Name>${project.artifactId}</Jar-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <configuration>
                            <classesDirectory>${surefire.classes.directory}</classesDirectory>
                            <additionalClasspathElements>
                                <additionalClasspathElement>${project.build.directory}/classes</additionalClasspathElement>
                            </additionalClasspathElements>
                            <!-- Java 21 requires -Djava.security.manager=allow for SecurityManager tests -->
                            <argLine>${surefire.security.manager.arg}</argLine>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <dependencies>
        <dependency>
            <groupId>org.wildfly.security</groupId>
            <artifactId>wildfly-elytron-base</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wildfly.security</groupId>
            <artifactId>wildfly-elytron-permission</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wildfly.security</groupId>
            <artifactId>wildfly-elytron-security-manager-action</artifactId>
        </dependency>
        <dependency>
            <groupId>org.wildfly.security</groupId>
            <artifactId>wildfly-elytron-util</artifactId>
        </dependency>
                
        <dependency>
            <groupId>org.kohsuke.metainf-services</groupId>
            <artifactId>metainf-services</artifactId>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
                
        <dependency>
            <groupId>org.wildfly.common</groupId>
            <artifactId>wildfly-common</artifactId>
            <!-- scope is compile ELY-1153 -->
        </dependency>

        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
        </dependency>        
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging-annotations</artifactId>
            <scope>provided</scope>
        </dependency>

        <!--Test scope-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <scope>test</scope>
        </dependency>
               
    </dependencies>

</project>
